--- a/action.yml
+++ b/action.yml
@@ -1,25 +1,29 @@
-name: "Service Mesh Performance Testing with Meshery"
-description: "Validate SMP specification using Meshery"
+name: "Performance Testing with Meshery"
+description: "Run performance tests in SMP format with Meshery"
 author: "Layer5"
 
 inputs:
-  # token to connect with the remote provider
+  # token to authenticate with Meshery
+  # see: https://docs.meshery.io/guides/performance-management#running-performance-benchmarks-in-your-pipelines
   provider_token:
     description: "Provider token to use. NOTE: value of the 'token' key in auth.json"
     required: true
 
-  # platform to deploy meshery
+  # platform to deploy Meshery to
   platform:
-    description: "Platform to deploy meshery on. Possible values: docker, kubernetes"
+    description: "Platform to deploy Meshery to. Allowed values: docker, kubernetes"
     default: docker
 
-  # SUPPLY EITHER "profile_filename" or profile_name
+  # provide either a test configuration file or a performance profile name
 
-  # name of the file storing the performance profile (keep in .github)
+  # name of the test configuration file written in SMP compatible format
+  # see: https://docs.meshery.io/guides/performance-management#running-performance-benchmarks-through-mesheryctl
+  # store this file in the .github folder in your repository
   profile_filename:
-    description: "Name of the file containing SMP profile"
+    description: "Name of the test configuration file"
 
-  # name of the prformance profile to use
+  # name of the performance profile to use to run tests
+  # see: https://docs.meshery.io/functionality/performance-management#performance-profiles
   profile_name:
     description: "Name of the performance profile"
 
