--- a/.github/workflows/scheduled-benchmarks.yml
+++ b/.github/workflows/scheduled-benchmarks.yml
@@ -28,7 +28,7 @@ jobs:
           driver: docker
         
       - name: Run Benchmark Tests
-        uses: ../../
+        uses: ./
         with:
           provider_token: ${{ github.event.inputs.provider_token }}
           platform: docker
@@ -47,9 +47,8 @@ jobs:
           driver: docker
         
       - name: Run Benchmark Tests
-        uses: ../../
+        uses: ./
         with:
           provider_token: ${{ secrets.MESHERY_TOKEN }}
           platform: kubernetes
           profile_name: istio-benchmark
-          
