--- a/.github/workflows/scheduled-benchmarks.yml
+++ b/.github/workflows/scheduled-benchmarks.yml
@@ -28,7 +28,7 @@ jobs:
           driver: docker
         
       - name: Run Benchmark Tests
-        uses: layer5io/meshery-smp-action
+        uses: layer5io/meshery-smp-action@master
         with:
           provider_token: ${{ github.event.inputs.provider_token }}
           platform: docker
@@ -47,7 +47,7 @@ jobs:
           driver: docker
         
       - name: Run Benchmark Tests
-        uses: layer5io/meshery-smp-action
+        uses: layer5io/meshery-smp-action@master
         with:
           provider_token: ${{ secrets.MESHERY_TOKEN }}
           platform: kubernetes
