GitHub Stargazers for updates
Signed-off-by: Vedant Kakde <69970950+vedant-kakde@users.noreply.github.com>

--- a/.github/workflows/slack.yml
+++ b/.github/workflows/slack.yml
@@ -13,4 +13,5 @@ jobs:
         SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
       uses: pullreminders/slack-action@master
       with:
-        args: '{\"channel\":\"CSK7N9TGX\",\"text\":\"Someone just starred meshery-smp-performance-action! (https://github.com/layer5io/meshery-smp-performance-action/stargazers) Total ⭐️: ${{env.STARS}}\"}'
+        args: '{\"channel\":\"CSK7N9TGX\",\"text\":\"${{ github.actor }} just starred meshery-smp-performance-action! (https://github.com/layer5io/meshery-smp-performance-action/stargazers) Total ⭐️: ${{env.STARS}}\"}'
+
