--- a/.github/workflows/scheduled-benchmarks.yml
+++ b/.github/workflows/scheduled-benchmarks.yml
@@ -9,7 +9,9 @@ on:
       profile_name:
         description: "performance profile to use"
         required: false
-        default: istio-benchmark
+      profile_filename:
+        description: "test configuration file"
+        required: false
   # scheduled to run at every Thursday at 13:22
   schedule:
     - cron: '22 13 * * THU'
@@ -42,6 +44,8 @@ jobs:
           provider_token: ${{ github.event.inputs.provider_token }}
           platform: docker
           profile_name: ${{ github.event.inputs.profile_name }}
+          profile_filename: ${{ github.event.inputs.profile_filename }}
+          endpoint_url: ${{env.ENDPOINT_URL}}
 
   scheduled-test:
     name: Scheduled Benchmark Test
@@ -70,3 +74,4 @@ jobs:
           provider_token: ${{ secrets.MESHERY_TOKEN }}
           platform: docker
           profile_name: istio-benchmark
+          profile_filename: istio-test-config
