--- a/action.yml
+++ b/action.yml
@@ -42,6 +42,18 @@ inputs:
     description: "Service Mesh which is being tested"
     required: false
 
+  # overrides the name specified in the test configuration file
+  # use this for dynamically injecting the test name while using the action
+  test_name:
+    description: "Name of the test"
+    required: false
+
+  # overrides the load generator specified in the test configuration file
+  # use this for dynamically injecting the load generator to test with while using the action
+  load_generator:
+    description: "Load generator to run tests with"
+    required: false
+
 runs:
   using: "node12"
   main: "main.js"
