Automating initialization of on-demand self-hosted CNCF CIL runner
The commit automates below steps:
1. Create a CNCF CIL machine and register it as a self-hosted runner
2. Run SMP benchmarks on the self-hosted runner
3. Stop and remove the CNCF CIL machine and self-hosted runner

Signed-off-by: Huang Xin <xin1.huang@intel.com>

--- a/.github/workflows/configurable-benchmark-test.yaml
+++ b/.github/workflows/configurable-benchmark-test.yaml
@@ -31,7 +31,7 @@ on:
 jobs:
   manual-test:
     name: Configurable Benchmark Test
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     if: ${{ github.event_name == 'workflow_dispatch' }}
     steps:
       - name: Setup Kubernetes
@@ -55,7 +55,7 @@ jobs:
         uses: layer5io/meshery-smp-action@self-hosted
         with:
           provider_token: ${{ secrets.MESHERY_TOKEN }}
-          platform: docker
+          platform: kubernetes
           profile_name: ${{ github.event.inputs.profile_name }}
           profile_filename: ${{ github.event.inputs.profile_filename }}
           endpoint_url: ${{env.ENDPOINT_URL}}
