Cherry-pick self-hosted to master
Signed-off-by: Huang Xin <xin1.huang@intel.com>

--- a/.github/workflows/configurable-benchmark-test-self-hosted.yaml
+++ b/.github/workflows/configurable-benchmark-test-self-hosted.yaml
@@ -98,7 +98,7 @@ jobs:
         shell: bash
 
       - name: Run Benchmark Tests
-        uses: layer5io/meshery-smp-action@self-hosted
+        uses: layer5io/meshery-smp-action@master
         with:
           provider_token: ${{ secrets.MESHERY_TOKEN }}
           platform: docker
