--- a/.github/workflows/scheduled-benchmarks-self-hosted.yaml
+++ b/.github/workflows/scheduled-benchmarks-self-hosted.yaml
@@ -43,7 +43,7 @@ jobs:
         id: getRegToken
         run: |
           reg_token=$(curl -s -X POST -H "Accept: application/vnd.github.v3+json" \
-          -H 'Authorization: token ${{ secrets.PAT }}' \
+          -H 'Authorization: token ${{ secrets.GH_ACCESS_TOKEN }}' \
           https://api.github.com/repos/${{github.repository}}/actions/runners/registration-token | jq -r .token)
           echo REG_TOKEN=$reg_token >> $GITHUB_ENV
           echo REPOSITORY=${{github.repository}} >> $GITHUB_ENV
@@ -141,8 +141,8 @@ jobs:
 
       - name: Remove CNCF CIL runner from github repository
         run: |
-          runner_id=$(curl -s -H 'Authorization: token ${{ secrets.PAT }}' -H "Accept: application/vnd.github.v3+json" https://api.github.com/repos/${{github.repository}}/actions/runners | jq '.runners[] | select(.name == "${{ matrix.service-mesh }}-${{ matrix.load-generator }}-${{ needs.start-runners-manual.outputs.github_run_id }}") | {id}' | jq -r .id)
-          curl -X DELETE -H 'Authorization: token ${{ secrets.PAT }}' -H "Accept: application/vnd.github.v3+json" https://api.github.com/repos/${{github.repository}}/actions/runners/$runner_id
+          runner_id=$(curl -s -H 'Authorization: token ${{ secrets.GH_ACCESS_TOKEN }}' -H "Accept: application/vnd.github.v3+json" https://api.github.com/repos/${{github.repository}}/actions/runners | jq '.runners[] | select(.name == "${{ matrix.service-mesh }}-${{ matrix.load-generator }}-${{ needs.start-runners-manual.outputs.github_run_id }}") | {id}' | jq -r .id)
+          curl -X DELETE -H 'Authorization: token ${{ secrets.GH_ACCESS_TOKEN }}' -H "Accept: application/vnd.github.v3+json" https://api.github.com/repos/${{github.repository}}/actions/runners/$runner_id
         shell: bash
 
   # Scheduled Benchmark Test
@@ -172,7 +172,7 @@ jobs:
         id: getRegToken
         run: |
           reg_token=$(curl -s -X POST -H "Accept: application/vnd.github.v3+json" \
-          -H 'Authorization: token ${{ secrets.PAT }}' \
+          -H 'Authorization: token ${{ secrets.GH_ACCESS_TOKEN }}' \
           https://api.github.com/repos/${{github.repository}}/actions/runners/registration-token | jq -r .token)
           echo REG_TOKEN=$reg_token >> $GITHUB_ENV
           echo REPOSITORY=${{github.repository}} >> $GITHUB_ENV
@@ -272,6 +272,6 @@ jobs:
 
       - name: Remove CNCF CIL runner from github repository
         run: |
-          runner_id=$(curl -s -H 'Authorization: token ${{ secrets.PAT }}' -H "Accept: application/vnd.github.v3+json" https://api.github.com/repos/${{github.repository}}/actions/runners | jq '.runners[] | select(.name == "${{ matrix.service-mesh }}-${{ matrix.load-generator }}-${{ matrix.test-configuration }}-${{ needs.start-runners-scheduled.outputs.github_run_id }}") | {id}' | jq -r .id)
-          curl -X DELETE -H 'Authorization: token ${{ secrets.PAT }}' -H "Accept: application/vnd.github.v3+json" https://api.github.com/repos/${{github.repository}}/actions/runners/$runner_id
+          runner_id=$(curl -s -H 'Authorization: token ${{ secrets.GH_ACCESS_TOKEN }}' -H "Accept: application/vnd.github.v3+json" https://api.github.com/repos/${{github.repository}}/actions/runners | jq '.runners[] | select(.name == "${{ matrix.service-mesh }}-${{ matrix.load-generator }}-${{ matrix.test-configuration }}-${{ needs.start-runners-scheduled.outputs.github_run_id }}") | {id}' | jq -r .id)
+          curl -X DELETE -H 'Authorization: token ${{ secrets.GH_ACCESS_TOKEN }}' -H "Accept: application/vnd.github.v3+json" https://api.github.com/repos/${{github.repository}}/actions/runners/$runner_id
         shell: bash
