Add Meshes: Kuma, App Mesh, Consul, Cilium
Signed-off-by: Huang Xin <xin1.huang@intel.com>

--- a/.github/workflows/configurable-benchmark-test.yaml
+++ b/.github/workflows/configurable-benchmark-test.yaml
@@ -20,6 +20,10 @@ on:
           - istio
           - linkerd
           - osm
+          - kuma
+          - appmesh
+          - cilium
+          - consul
       load_generator:
         type: choice
         required: false
