--- a/.github/workflows/configurable-benchmark-test-self-hosted.yaml
+++ b/.github/workflows/configurable-benchmark-test-self-hosted.yaml
@@ -16,6 +16,10 @@ on:
           - istio
           - linkerd
           - osm
+          - kuma
+          - appmesh
+          - cilium
+          - consul
       load_generator:
         type: choice
         required: false
