--- a/.github/workflows/scheduled-benchmarks-self-hosted.yaml
+++ b/.github/workflows/scheduled-benchmarks-self-hosted.yaml
@@ -12,14 +12,15 @@ on:
       profile_filename:
         description: "test configuration file"
         required: false
-  # scheduled to run at everyday at 13:00
+  # scheduled to run on everyhour
   schedule:
-    - cron: '0 13 * * *'
+    - cron: '0 * * * *'
 
 jobs:
   # Manual Benchmark Test
   start-runners-manual:
     name: Start self-hosted CNCF CIL runners for manual test
+    timeout-minutes: 60
     runs-on: ubuntu-latest
     if: ${{ github.event_name == 'workflow_dispatch' }}
     strategy:
@@ -60,6 +61,7 @@ jobs:
 
   manual-test:
     name: Manual Benchmark Test
+    timeout-minutes: 60
     needs:
       - start-runners-manual
     runs-on: ${{ matrix.service-mesh }}-${{ matrix.load-generator }}-${{ github.run_id }}
@@ -84,6 +86,8 @@ jobs:
           sudo apt-cache policy docker-ce
           sudo apt install -y docker-ce
           sudo systemctl status docker
+          sudo mkdir -p ~/.kube
+          sudo chmod 777 ~/.kube
 
       - name: Setup Kubernetes
         uses: manusa/actions-setup-minikube@v2.4.3
@@ -119,6 +123,7 @@ jobs:
 
   stop-runner-manual:
     name: Stop self-hosted runner
+    timeout-minutes: 60
     needs:
       - start-runners-manual # required to get output from the start-runner job
       - manual-test # required to wait when the main job is done
@@ -140,6 +145,7 @@ jobs:
         shell: bash
 
       - name: Remove CNCF CIL runner from github repository
+        if: always()
         run: |
           runner_id=$(curl -s -H 'Authorization: token ${{ secrets.GH_ACCESS_TOKEN }}' -H "Accept: application/vnd.github.v3+json" https://api.github.com/repos/${{github.repository}}/actions/runners | jq '.runners[] | select(.name == "${{ matrix.service-mesh }}-${{ matrix.load-generator }}-${{ needs.start-runners-manual.outputs.github_run_id }}") | {id}' | jq -r .id)
           curl -X DELETE -H 'Authorization: token ${{ secrets.GH_ACCESS_TOKEN }}' -H "Accept: application/vnd.github.v3+json" https://api.github.com/repos/${{github.repository}}/actions/runners/$runner_id
@@ -148,6 +154,7 @@ jobs:
   # Scheduled Benchmark Test
   start-runners-scheduled:
     name: Start self-hosted CNCF CIL runners for scheduled test
+    timeout-minutes: 60
     runs-on: ubuntu-latest
     if: ${{ github.event_name == 'schedule' }}
     strategy:
@@ -189,6 +196,7 @@ jobs:
 
   scheduled-test:
     name: Scheduled Benchmark Test
+    timeout-minutes: 60
     needs:
       - start-runners-scheduled
     runs-on: ${{ matrix.service-mesh }}-${{ matrix.load-generator }}-${{ matrix.test-configuration }}-${{ github.run_id }}
@@ -214,6 +222,8 @@ jobs:
           sudo apt-cache policy docker-ce
           sudo apt install -y docker-ce
           sudo systemctl status docker
+          sudo mkdir -p ~/.kube
+          sudo chmod 777 ~/.kube
 
       - name: Setup Kubernetes
         uses: manusa/actions-setup-minikube@v2.4.3
@@ -236,7 +246,7 @@ jobs:
         run: echo "::set-output name=date::$(date +'%Y-%m-%d-%H.%M.%S')"
         
       - name: Run Benchmark Tests
-        uses: layer5io/meshery-smp-action@self-hosted
+        uses: layer5io/meshery-smp-action@master
         with:
           provider_token: ${{ secrets.MESHERY_TOKEN }}
           platform: docker
@@ -249,6 +259,7 @@ jobs:
 
   stop-runner-scheduled:
     name: Stop self-hosted runner
+    timeout-minutes: 60
     needs:
       - start-runners-scheduled # required to get output from the start-runner job
       - scheduled-test # required to wait when the main job is done
@@ -271,6 +282,7 @@ jobs:
         shell: bash
 
       - name: Remove CNCF CIL runner from github repository
+        if: always()
         run: |
           runner_id=$(curl -s -H 'Authorization: token ${{ secrets.GH_ACCESS_TOKEN }}' -H "Accept: application/vnd.github.v3+json" https://api.github.com/repos/${{github.repository}}/actions/runners | jq '.runners[] | select(.name == "${{ matrix.service-mesh }}-${{ matrix.load-generator }}-${{ matrix.test-configuration }}-${{ needs.start-runners-scheduled.outputs.github_run_id }}") | {id}' | jq -r .id)
           curl -X DELETE -H 'Authorization: token ${{ secrets.GH_ACCESS_TOKEN }}' -H "Accept: application/vnd.github.v3+json" https://api.github.com/repos/${{github.repository}}/actions/runners/$runner_id
