Adding osm to configurable test
Signed-off-by: hershd23 <hershdhillon23@gmail.com>

--- a/.github/workflows/configurable-benchmark-test.yaml
+++ b/.github/workflows/configurable-benchmark-test.yaml
@@ -19,6 +19,7 @@ on:
         options:
           - istio
           - linkerd
+          - osm
       load_generator:
         type: choice
         required: false
