--- a/.github/workflows/configurable-benchmark-test.yaml
+++ b/.github/workflows/configurable-benchmark-test.yaml
@@ -19,6 +19,7 @@ on:
         options:
           - istio
           - linkerd
+          - osm
           - kuma
           - appmesh
           - cilium
