--- a/.github/workflows/configurable-benchmark-test-self-hosted.yaml
+++ b/.github/workflows/configurable-benchmark-test-self-hosted.yaml
@@ -15,6 +15,7 @@ on:
         options:
           - istio
           - linkerd
+          - osm
           - kuma
           - appmesh
           - cilium
