--- a/.github/workflows/configurable-benchmark-test.yaml
+++ b/.github/workflows/configurable-benchmark-test.yaml
@@ -53,8 +53,8 @@ jobs:
           .github/workflows/scripts/${{ github.event.inputs.service_mesh }}_deploy.sh
         shell: bash
 
-      - name: Initiate tmate session
-        uses: mxschmitt/action-tmate@v3
+      #- name: Initiate tmate session
+      #  uses: mxschmitt/action-tmate@v3
         
       - name: Run Benchmark Tests
         uses: layer5io/meshery-smp-action@master
