--- a/.github/workflows/configurable-benchmark-test.yaml
+++ b/.github/workflows/configurable-benchmark-test.yaml
@@ -41,7 +41,7 @@ jobs:
           minikube version: v1.23.2 
           kubernetes version: v1.23.2
           driver: docker
-          start args: --cpus 4 --disk-size 10000mb
+          start args: --disk-size 10000mb
 
       - name: Checkout Code
         uses: actions/checkout@v2
