--- a/.github/workflows/scheduled-benchmarks-self-hosted.yaml
+++ b/.github/workflows/scheduled-benchmarks-self-hosted.yaml
@@ -90,11 +90,12 @@ jobs:
           sudo chmod 777 ~/.kube
 
       - name: Setup Kubernetes
-        uses: manusa/actions-setup-minikube@v2.4.3
+        uses: manusa/actions-setup-minikube@v2.7.1
         with:
           minikube version: 'v1.23.2'
           kubernetes version: 'v1.23.2'
           driver: docker
+          start args: --disk-size 10000mb
 
       - name: Checkout Code
         uses: actions/checkout@v2
@@ -226,11 +227,12 @@ jobs:
           sudo chmod 777 ~/.kube
 
       - name: Setup Kubernetes
-        uses: manusa/actions-setup-minikube@v2.4.3
+        uses: manusa/actions-setup-minikube@v2.7.1
         with:
           minikube version: 'v1.23.2'
           kubernetes version: 'v1.23.2'
           driver: docker
+          start args: --disk-size 10000mb
 
       - name: Checkout Code
         uses: actions/checkout@v2
