--- a/.github/workflows/scheduled-benchmarks.yml
+++ b/.github/workflows/scheduled-benchmarks.yml
@@ -28,12 +28,12 @@ jobs:
         load-generator: ['fortio', 'wrk2']
     steps:
       - name: Setup Kubernetes
-        uses: manusa/actions-setup-minikube@v2.7.0
+        uses: medyagh/setup-minikube@v0.0.8
         with:
           minikube version: 'v1.23.2'
           kubernetes version: 'v1.23.2'
           driver: docker
-          start args: --disk-size 10000mb
+          memory: 10000m
 
       - name: Checkout Code
         uses: actions/checkout@v2
@@ -72,12 +72,12 @@ jobs:
         test-configuration: ['load-test.yaml','soak-test.yaml']
     steps:
       - name: Setup Kubernetes
-        uses: manusa/actions-setup-minikube@v2.7.0
+        uses: medyagh/setup-minikube@v0.0.8
         with:
           minikube version: 'v1.23.2'
           kubernetes version: 'v1.23.2'
           driver: docker
-          start args: --disk-size 10000mb
+          memory: 10000m
 
       - name: Checkout Code
         uses: actions/checkout@v2
