--- a/.github/workflows/configurable-benchmark-test-self-hosted.yaml
+++ b/.github/workflows/configurable-benchmark-test-self-hosted.yaml
@@ -87,7 +87,7 @@ jobs:
           sudo chmod 777 ~/.kube
 
       - name: Setup Kubernetes
-        uses: manusa/setup-minikube@v2.6.1
+        uses: manusa/actions-setup-minikube@v2.6.1
         with:
           minikube version: 'v1.23.2'
           kubernetes version: 'v1.23.2'
