Make changes in workflow schema
Signed-off-by: Aadhitya A <aadhitya864@gmail.com>

--- a/.github/workflows/configurable-benchmark-test-self-hosted.yaml
+++ b/.github/workflows/configurable-benchmark-test-self-hosted.yaml
@@ -90,7 +90,7 @@ jobs:
 
       - name: Start minikube 
         run: |
-          minikube start
+          minikube start --memory 5000 
           kubectl get po -A
 
       - name: Checkout Code
