--- a/.github/workflows/configurable-benchmark-test.yaml
+++ b/.github/workflows/configurable-benchmark-test.yaml
@@ -36,12 +36,11 @@ jobs:
     if: ${{ github.event_name == 'workflow_dispatch' }}
     steps:
       - name: Setup Kubernetes
-        uses: medyagh/setup-minikube@v0.0.8
+        uses: manusa/actions-setup-minikube@v2.7.1
         with:
           minikube version: v1.23.2 
           kubernetes version: v1.23.2
           driver: docker
-          memory: 5120m
 
       - name: Checkout Code
         uses: actions/checkout@v2
