--- a/.github/workflows/scheduled-benchmarks-self-hosted.yaml
+++ b/.github/workflows/scheduled-benchmarks-self-hosted.yaml
@@ -226,14 +226,14 @@ jobs:
           sudo systemctl status docker
           sudo mkdir -p ~/.kube
           sudo chmod 777 ~/.kube
+          curl -LO https://storage.googleapis.com/minikube/releases/latest/minikube-linux-amd64
+          sudo install minikube-linux-amd64 /usr/local/bin/minikube
 
-      - name: Setup Kubernetes
-        uses: medyagh/setup-minikube@v0.0.8
-        with:
-          minikube version: 'v1.23.2'
-          kubernetes version: 'v1.23.2'
-          driver: docker
-          memory: 10000m
+
+      - name: Start minikube 
+        run: |
+          minikube start --memory 5000 
+          kubectl get po -A
 
       - name: Checkout Code
         uses: actions/checkout@v2
