--- a/.github/workflows/scheduled-istioCrypto-benchmark.yml
+++ b/.github/workflows/scheduled-istioCrypto-benchmark.yml
@@ -62,7 +62,7 @@ jobs:
     timeout-minutes: 60
     needs:
       - start-runners-scheduled
-    runs-on: istioCrpto-fortio-load-${{ github.run_id }}
+    runs-on: istioCrypto-fortio-load-${{ github.run_id }}
     if: ${{ github.event_name == 'schedule' }}
     strategy:
       # fail-fast: false
@@ -128,12 +128,12 @@ jobs:
       - start-runners-scheduled # required to get output from the start-runner job
       - scheduled-test # required to wait when the main job is done
     runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        service-mesh: ['istio', 'linkerd', 'osm']
-        load-generator: ['fortio', 'wrk2']
-        test-configuration: ['load-test','soak-test']
+    # strategy:
+    #   fail-fast: false
+    #   matrix:
+    #     service-mesh: ['istio', 'linkerd', 'osm']
+    #     load-generator: ['fortio', 'wrk2']
+    #     test-configuration: ['load-test','soak-test']
     if: ${{ always() && github.event_name == 'schedule' }} # required to stop the runner even if the error happened in the previous jobs
     steps:
       - name: Checkout Code
@@ -142,12 +142,12 @@ jobs:
       - name: Stop CNCF CIL runner
         run: |
           chmod +x .github/workflows/scripts/stop-cil-runner.sh
-          .github/workflows/scripts/stop-cil-runner.sh ${{ secrets.cncf_cil_token }} ${{ matrix.service-mesh }}-${{ matrix.load-generator }}-${{ matrix.test-configuration }}-${{ needs.start-runners-scheduled.outputs.github_run_id }}
+          .github/workflows/scripts/stop-cil-runner.sh ${{ secrets.cncf_cil_token }} istioCrypto-fortio-load-${{ needs.start-runners-scheduled.outputs.github_run_id }}
         shell: bash
 
       - name: Remove CNCF CIL runner from github repository
         if: always()
         run: |
-          runner_id=$(curl -s -H 'Authorization: token ${{ secrets.GH_ACCESS_TOKEN }}' -H "Accept: application/vnd.github.v3+json" https://api.github.com/repos/${{github.repository}}/actions/runners | jq '.runners[] | select(.name == "${{ matrix.service-mesh }}-${{ matrix.load-generator }}-${{ matrix.test-configuration }}-${{ needs.start-runners-scheduled.outputs.github_run_id }}") | {id}' | jq -r .id)
+          runner_id=$(curl -s -H 'Authorization: token ${{ secrets.GH_ACCESS_TOKEN }}' -H "Accept: application/vnd.github.v3+json" https://api.github.com/repos/${{github.repository}}/actions/runners | jq '.runners[] | select(.name == "istioCrypto-fortio-load-${{ needs.start-runners-scheduled.outputs.github_run_id }}") | {id}' | jq -r .id)
           curl -X DELETE -H 'Authorization: token ${{ secrets.GH_ACCESS_TOKEN }}' -H "Accept: application/vnd.github.v3+json" https://api.github.com/repos/${{github.repository}}/actions/runners/$runner_id
         shell: bash
